2009-06-02  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/pixel_cache.c (InterpolateViewColor, InterpolateColor):
	Moved from gem.c.  Gem functions should not be accessing the pixel
	cache.

2009-06-01  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/command.c (CompareImageCommand): Add a -maximum-error
	option to 'compare' so that it can easily be used in boolean logic
	when comparing images.

2009-05-30  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* tests/Makefile.am (TESTS_XFAIL_TESTS): If Ghostscript is not
	available then XFAIL the tests which depend on it.

	* magick/pixel_cache.c (GetCacheInfo): Assure that allocated
	stuctures do not occupy the same cache lines.

2009-05-29  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/studio.h (MAGICK_CACHE_LINE_SIZE): Allow cache line size
	to be set in one place in case we want to configure for it later.

	* magick/effect.c (AllocateMedianList): Assure that allocated
	stuctures do not occupy the same cache lines.

	* magick/random.c (AcquireMagickRandomKernel): Assure that
	allocated random kernels do not occupy the same cache lines.

	* magick/gem.c (GenerateDifferentialNoise): User is required to
	supply random kernel.

	* doc/options.imdoc: Document -format "%p".  Problem was reported
	by Stijn Sanders.

2009-05-28  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/Makefile.am (coders_tiff_la_LIBADD): Libtiff may now also
	depend on libjbig and the math library.

	* doc/gmdoc2html: Fix link to ball.png.  Problem was reported by
	Wes Fox.

	* VisualMagick/installer/inc/files-documentation.isx: Include Wand
	API documentation.

	* VisualMagick/installer/inc/icons-associate.isx: Fix Windows
	Start menu link to web pages.

	* configure.ac: --with-perl is changed to --without-perl since
	building PerlMagick is no longer the default.  Building PerlMagick
	automatically has caused too many problems.

	* PerlMagick/Makefile.am: GraphicsMagick no longer automatically